tests/snapshots/encode_pattern_match__box.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/box.hvm
---
(unbox) = λx (#box x unbox$Pnew)

(new) = λval λ#box new (#box.new.val new val)

(unbox$R0) = λval val

(unbox$R1) = λx x

(unbox$Pnew) = λ#box.new.val y0 (unbox$R0 y0)
