tests/snapshots/encode_pattern_match__definition_merge.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/definition_merge.hvm
---
TaggedScott:
(Foo) = λa λb (#Either (a #Either λc λd (#Bool (c λe #Either (e #Either λf #Bool (f 1 1) #Either λg #Bool (g 2 2)) λh #Either (h #Either λi #Bool (i 1 1) #Either λj #Bool (j 2 2))) d) #Either λk λl (#Bool (k λm #Either (m #Either λn #Bool (n 3 3) #Either λo #Bool (o 3 3)) λp #Either (p #Either λq #Bool (q 3 3) #Either λr #Bool (r 3 3))) l)) b)

(Left) = λa #Either λb #Either λ* #Either (b a)

(Right) = λa #Either λ* #Either λc #Either (c a)

(True) = #Bool λa #Bool λ* a

(False) = #Bool λ* #Bool λb b

Scott:
(Foo) = λa λb (a λc λd (c λe (e λf (f 1 1) λg (g 2 2)) λh (h λi (i 1 1) λj (j 2 2)) d) λk λl (k λm (m λn (n 3 3) λo (o 3 3)) λp (p λq (q 3 3) λr (r 3 3)) l) b)

(Left) = λa λb λ* (b a)

(Right) = λa λ* λc (c a)

(True) = λa λ* a

(False) = λ* λb b
