tests/snapshots/encode_pattern_match__flatten_era_pat.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/flatten_era_pat.hvm
---
TaggedScott:
(Fn1) = λa λ* let (*, d) = a; let (e, *) = d; e

(Fn2) = λa let (*, c) = a; let (*, e) = c; let (f, *) = e; f

(Fn3) = λa λ* let (c, *) = a; switch c { 0: 0; _: λe (+ e 1) }

(main) = (Fn2 ((1, 2), (3, (4, (5, 6)))) 0)

Scott:
(Fn1) = λa λ* let (*, d) = a; let (e, *) = d; e

(Fn2) = λa let (*, c) = a; let (*, e) = c; let (f, *) = e; f

(Fn3) = λa λ* let (c, *) = a; switch c { 0: 0; _: λe (+ e 1) }

(main) = (Fn2 ((1, 2), (3, (4, (5, 6)))) 0)
