tests/snapshots/encode_pattern_match__match_adt_unscoped_var.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/match_adt_unscoped_var.hvm
---
TaggedScott:
(Foo) = λ$x #Maybe ((Some 1) $x #Maybe λb b)

(Bar) = (#Maybe ((Some 1) $x #Maybe λb b) λ$x *)

(main) = *

(None) = #Maybe λa #Maybe λ* a

(Some) = λa #Maybe λ* #Maybe λc #Maybe (c a)

Scott:
(Foo) = λ$x (Some 1 $x λb b)

(Bar) = (Some 1 $x λb b λ$x *)

(main) = *

(None) = λa λ* a

(Some) = λa λ* λc (c a)
