tests/snapshots/encode_pattern_match__match_bind.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/match_bind.hvm
---
TaggedScott:
(cheese) = let {a a_2} = (+ 2 3); (switch a { 0: λ* 653323; _: λc λd (+ d c) } a_2)

(main) = cheese

Scott:
(cheese) = let {a a_2} = (+ 2 3); (switch a { 0: λ* 653323; _: λc λd (+ d c) } a_2)

(main) = cheese
