tests/snapshots/encode_pattern_match__match_num_adt_tup_parser.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/match_num_adt_tup_parser.hvm
---
TaggedScott:
(Parse) = λa λb (#String (b #String λc #String λd λe (switch (- c 10) { 0: λg λh (Ok (0, h, g)); _: λi λj λk (switch (- i 29) { 0: λm λn (Ok (40, n, m)); _: λo λp λq (switch o { 0: λr λs (Ok (41, s, r)); _: λt λu λv (Err ((String.cons (+ t 42) v), u)) } p q) } j k) } e d) λw (Err (String.nil, w))) a)

(main) = #Result_ ((Parse * (String.cons 40 (String.cons 43 String.nil))) #Result_ λd let (e, f, g) = d; (e, (Parse g f)) #Result_ λh (Err h))

(String.cons) = λa λb #String λc #String λ* #String (c a b)

(String.nil) = #String λ* #String λb b

(Ok) = λa #Result_ λb #Result_ λ* #Result_ (b a)

(Err) = λa #Result_ λ* #Result_ λc #Result_ (c a)

Scott:
(Parse) = λa λb (b λc λd λe (switch (- c 10) { 0: λg λh (Ok (0, h, g)); _: λi λj λk (switch (- i 29) { 0: λm λn (Ok (40, n, m)); _: λo λp λq (switch o { 0: λr λs (Ok (41, s, r)); _: λt λu λv (Err ((String.cons (+ t 42) v), u)) } p q) } j k) } e d) λw (Err (String.nil, w)) a)

(main) = (Parse * (String.cons 40 (String.cons 43 String.nil)) λd let (e, f, g) = d; (e, (Parse g f)) λh (Err h))

(String.cons) = λa λb λc λ* (c a b)

(String.nil) = λ* λb b

(Ok) = λa λb λ* (b a)

(Err) = λa λ* λc (c a)
